# pyfortune

./: .gitignore  Makefile  Pipfile  README.md  dev-requirements.txt  requirements.txt  setup.cfg
docs/: conf.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyfortune.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pyfortune/: exception.html  session.html
docs/_sources/: changelog.rst.txt  index.rst.txt  modules.rst.txt  pyfortune.rst.txt
docs/_static/: documentation_options.js
docs/html/: .buildinfo  index.html  pyfortune.html  search.html
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
docs_build/: conf.py
docs_build/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree  modules.doctree  pyfortune.doctree
docs_build/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyfortune.html  search.html  searchindex.js
docs_build/_build/html/_modules/pyfortune/: exception.html  session.html
docs_build/_build/html/_sources/: index.rst.txt  pyfortune.rst.txt
pyfortune/: error.py  exception.py  search.py  session.py  test_search.py
tests/: test_apply_all_details.py  test_apply_detail.py  test_apply_list.py  test_init.py  test_login.py  utils.py
