[metadata]
name = py-fortune
version = file: VERSION
url = https://github.com/mypaceshun/pyfortune
author = KAWAI Shun
author_email = shun at osstech.co.jp
maintainer = KAWAI Shun
maintainer_email = shun at osstech.co.jp
license = MIT
license_file = LICENSE
description = scraping support tool
long_description = file: README.md

[options]
zip_safe = false
install_require =
	beautifulsoup4==4.7.1
	requests==2.21.0
python_require = '>=3.2'

[tool:pytest]
addopts = --capture=no
